--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,3 +28,15 @@
     width: 24px; /* アイコンの幅を大きく */
     height: 24px; /* アイコンの高さを大きく */
 }
+
+
+.custom-alert {
+        width: 30%; /* 横幅を80%に設定 */
+        margin: 30px auto; /* 中央寄せ */
+        padding: 15px;
+        background-color: rgba(255, 192, 203, 0.281);
+        color: #000000;
+        border: 1px solid pink;
+        border-radius: 5px;
+        text-align: center;
+    }
