--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    font-family: "Volkhov", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 .add-post {
     position: fixed;
     bottom: 8%;
